# django-saas

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml
apps/accounts/: README.md  admin.py  api.py  apps.py  manifest.json  models.py  serializers.py  signals.py  urls.py  views.py
apps/activity_stream/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/admin_dashboard/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/ai_agents/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/ai_chat/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/ai_core/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/ai_moderation/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/ai_usage/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/analytics/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/announcements/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/api/: README.md  api.py  apps.py  exceptions.py  manifest.json  models.py  pagination.py  throttling.py  urls.py  versioning.py  views.py
apps/api_docs/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/api_keys/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/app_config/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/audit_log/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/billing/: README.md  admin.py  api.py  apps.py  manifest.json  models.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py  webhooks.py
apps/blog/: README.md  api.py  apps.py  manifest.json  models.py
apps/caching/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/checkout/: README.md  api.py  apps.py  manifest.json  models.py  serializers.py  urls.py  views.py
apps/comments/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/compliance/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/containerization/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/data_portability/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/db_utils/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/developer_portal/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/email_marketing/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/email_templates/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/email_tracking/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/embeddings/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/encryption/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/experiments/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/exports/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/feature_flags/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/feedback/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/forms_builder/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/graphql_api/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/health/: README.md  api.py  apps.py  checks.py  manifest.json  models.py  urls.py  views.py
apps/i18n/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/impersonation/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/integrations/: README.md  api.py  apps.py  manifest.json  models.py
apps/internal_tools/: README.md  api.py  apps.py  manifest.json  models.py  urls.py
apps/invitations/: README.md  api.py  apps.py  (+3 more)
config/: asgi.py  celery.py  otel.py  urls.py  wsgi.py
docs/: DEPENDENCY_GRAPH.md
scripts/: check_boundaries.py
templates/: 403.html  404.html  500.html  base.html
(+385 files in other folders)
